[add] - add swagger update
